--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1124,6 +1124,21 @@ LeadScreen As screen:
                             Fill: =RGBA(54, 176, 75, 1)
                             Height: =60
                             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+                            OnSelect: |-
+                                =If(
+                                    IsBlank(txtinptestimatenumber.Text),
+                                    Notify(
+                                        "Please enter estimate number.",
+                                        NotificationType.Information
+                                    ),
+                                    UpdateIf(
+                                        LeadInformations,
+                                        ID = glryleadlistLS.Selected.ID,
+                                        {LeadEstimateNumber: txtinptestimatenumber.Text,
+                                        LeadStatus:"Quoted"}
+                                    );
+                                    Notify("Estimate number saved successfully.",NotificationType.Success);
+                                )
                             Text: ="Submit Estimate Number"
                             Width: =300
                             X: =410
