--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -29,6 +29,7 @@ ScopeScreen As screen:
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
+            PaddingLeft: =10
             PaddingRight: =0.00
             PaddingTop: =0.00
             Width: =Parent.Width
@@ -42,8 +43,8 @@ ScopeScreen As screen:
                 OnSelect: |-
                     =Navigate(UnitScreen);
                     Set(varIndicatorUS,false);
-                PaddingBottom: =Parent.Height/4
-                PaddingTop: =Parent.Height/4
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
                 X: =18
                 Y: =11
@@ -53,9 +54,10 @@ ScopeScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
+                PaddingBottom: =5
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
                 X: =0.00
@@ -175,6 +177,7 @@ ScopeScreen As screen:
 
                 IconLine1CL_2 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -186,6 +189,7 @@ ScopeScreen As screen:
 
                 IconLine2CL_2 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -197,6 +201,7 @@ ScopeScreen As screen:
 
                 IconLine3CL_2 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -208,6 +213,7 @@ ScopeScreen As screen:
 
                 IconLine4CL_2 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -281,73 +287,90 @@ ScopeScreen As screen:
 
                 Image1_10 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicator=true,Color.Green,Color.Red)
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicator=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
                 Image1_12 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorUS=true,Color.Green,Color.Red)
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorUS=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine1CL_2.X+IconLine1CL_2.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =21
 
                 Image1_13 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorSS=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine2CL_2.X+IconLine2CL_2.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =22
 
                 Image1_14 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine3CL_2.X+IconLine3CL_2.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =23
 
                 Image1_15 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine4CL_2.X+IconLine4CL_2.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =24
