--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -44,8 +44,8 @@ CreatLeadScreen As screen:
                 OnSelect: |-
                     =Navigate(DashboardScreen);
                     UpdateContext({locInfoExpanded:false})
-                PaddingBottom: =Parent.Height/4
-                PaddingTop: =Parent.Height/4
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
                 X: =18
                 Y: =11
@@ -55,9 +55,10 @@ CreatLeadScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
+                PaddingBottom: =5
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
                 X: =0.00
@@ -162,6 +163,8 @@ CreatLeadScreen As screen:
 
                 IconLine1CL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -173,6 +176,8 @@ CreatLeadScreen As screen:
 
                 IconLine2CL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -184,6 +189,8 @@ CreatLeadScreen As screen:
 
                 IconLine3CL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -195,6 +202,8 @@ CreatLeadScreen As screen:
 
                 IconLine4CL As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -268,83 +277,98 @@ CreatLeadScreen As screen:
 
                 Image1 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicator=true,Color.Green,Color.White)
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicator=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
                 Image1_1 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: |-
                         =//Color.Red
                         Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine1CL.X+IconLine1CL.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =21
 
                 Image1_2 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: |-
                         =//Color.Red
                         Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine2CL.X+IconLine2CL.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =22
 
                 Image1_3 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: |-
                         =//Color.Red
                         Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine3CL.X+IconLine3CL.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =23
 
                 Image1_4 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: |-
                         =//Color.Red
                         Color.White
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine4CL.X+IconLine4CL.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =24
