--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -48,7 +48,7 @@ DashboardScreen As screen:
                 LayoutMinHeight: =Self.Height
                 OnSelect: =//Set(varshowMenu,!varshowMenu)
                 PaddingLeft: =15
-                PaddingRight: =5
+                PaddingRight: =10
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/10,Parent.Width/12)
                 X: =1390.56
@@ -59,9 +59,10 @@ DashboardScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
+                PaddingBottom: =5
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
                 X: =0.00
