--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -28,6 +28,7 @@ EstimateScreen As screen:
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
+            PaddingLeft: =10
             PaddingRight: =0.00
             PaddingTop: =0.00
             Width: =Parent.Width
@@ -41,8 +42,8 @@ EstimateScreen As screen:
                 OnSelect: |-
                     =Navigate(ScopeScreen);
                     Set(VarIndicatorSS,false);
-                PaddingBottom: =Parent.Height/4
-                PaddingTop: =Parent.Height/4
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
                 X: =18
                 Y: =11
@@ -52,9 +53,10 @@ EstimateScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
+                PaddingBottom: =5
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
                 X: =0.00
@@ -173,6 +175,8 @@ EstimateScreen As screen:
 
                 IconLine1CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -186,6 +190,8 @@ EstimateScreen As screen:
 
                 IconLine2CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -199,6 +205,8 @@ EstimateScreen As screen:
 
                 IconLine3CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -212,6 +220,8 @@ EstimateScreen As screen:
 
                 IconLine4CL_3 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisabledColor: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -286,7 +296,11 @@ EstimateScreen As screen:
                     ZIndex: =16
 
                 Image1_16 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicator=true,Color.Green,Color.Red)
                     FocusedBorderThickness: =0
                     Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
@@ -301,7 +315,11 @@ EstimateScreen As screen:
                     ZIndex: =20
 
                 Image1_17 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorUS=true,Color.Green,Color.Red)
                     FocusedBorderThickness: =0
                     Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
@@ -316,7 +334,11 @@ EstimateScreen As screen:
                     ZIndex: =21
 
                 Image1_18 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorSS=true,Color.Green,Color.Red)
                     FocusedBorderThickness: =0
                     Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
@@ -332,7 +354,10 @@ EstimateScreen As screen:
 
                 Image1_19 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorES=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
                     Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
@@ -348,7 +373,10 @@ EstimateScreen As screen:
 
                 Image1_20 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =RGBA(255, 255, 255, 1)
                     FocusedBorderThickness: =0
                     Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
@@ -584,6 +612,7 @@ EstimateScreen As screen:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         CheckboxBackgroundFill: =RGBA(0, 0, 0, 0)
                         CheckboxBorderColor: =RGBA(116, 116, 116, 1)
+                        Color: =If(RGBA(0, 0, 0, 1)
                         DisabledBorderColor: =RGBA(0, 0, 0, 0)
                         DisabledColor: =RGBA(202, 202, 202, 1)
                         Font: =Font.Arial
