--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -226,6 +226,7 @@ UnitScreen As screen:
                     ZIndex: =11
 
                 lblStep1CL_1 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -240,6 +241,7 @@ UnitScreen As screen:
                     ZIndex: =12
 
                 lblStep2CL_1 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -252,6 +254,7 @@ UnitScreen As screen:
                     ZIndex: =13
 
                 lblStep3CL_1 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -264,6 +267,7 @@ UnitScreen As screen:
                     ZIndex: =14
 
                 lblSteo4CL_1 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -276,6 +280,7 @@ UnitScreen As screen:
                     ZIndex: =15
 
                 lblStep5CL_1 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
