--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -214,6 +214,7 @@ CreatLeadScreen As screen:
                     ZIndex: =11
 
                 lblStep1CL As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -228,6 +229,7 @@ CreatLeadScreen As screen:
                     ZIndex: =12
 
                 lblStep2CL As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -240,6 +242,7 @@ CreatLeadScreen As screen:
                     ZIndex: =13
 
                 lblStep3CL As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -252,6 +255,7 @@ CreatLeadScreen As screen:
                     ZIndex: =14
 
                 lblSteo4CL As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -264,6 +268,7 @@ CreatLeadScreen As screen:
                     ZIndex: =15
 
                 lblStep5CL As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -377,7 +382,7 @@ CreatLeadScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DataSource: =LeadInformations
                 FillPortions: =0
-                Height: =If(Parent.Width>375,(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+30),(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+20))
+                Height: =If(Parent.Width>375,(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+30),(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+30))
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =400
