--- a/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ImageUploadScreen.fx.yaml
@@ -15,7 +15,7 @@ ImageUploadScreen As screen:
         ZIndex: =1
 
         ctnHeaderIS As groupContainer.horizontalAutoLayoutContainer:
-            AlignInContainer: =AlignInContainer.SetByContainer
+            AlignInContainer: =AlignInContainer.Center
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: |-
@@ -26,6 +26,7 @@ ImageUploadScreen As screen:
             LayoutMinHeight: =100
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
+            PaddingLeft: =10
             PaddingRight: =0.00
             PaddingTop: =0.00
             Width: =Parent.Width
@@ -39,8 +40,8 @@ ImageUploadScreen As screen:
                 OnSelect: |-
                     =Navigate(EstimateScreen);
                     Set(VarIndicatorES,false);
-                PaddingBottom: =Parent.Height/4
-                PaddingTop: =Parent.Height/4
+                PaddingBottom: =Parent.Height/3
+                PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
                 X: =18
                 Y: =11
@@ -50,9 +51,10 @@ ImageUploadScreen As screen:
                 DisplayMode: =DisplayMode.View
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =Parent.Height
-                Image: ='3x'
+                Image: ='1x'
                 LayoutMinHeight: =320
                 LayoutMinWidth: =320
+                PaddingBottom: =5
                 PaddingTop: =0.00
                 Width: =If(Parent.Width>Parent.Height,Parent.Width/8,Parent.Width/12)
                 X: =0.00
@@ -171,6 +173,7 @@ ImageUploadScreen As screen:
 
                 IconLine1CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -185,6 +188,7 @@ ImageUploadScreen As screen:
 
                 IconLine2CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -199,6 +203,7 @@ ImageUploadScreen As screen:
 
                 IconLine3CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -213,6 +218,7 @@ ImageUploadScreen As screen:
 
                 IconLine4CL_4 As icon.HorizontalLine:
                     Color: =RGBA(202, 202, 202, 1)
+                    DisplayMode: =DisplayMode.View
                     Height: =Parent.Height/13
                     Icon: =Icon.HorizontalLine
                     Width: |-
@@ -288,77 +294,96 @@ ImageUploadScreen As screen:
                     ZIndex: =16
 
                 Image1_21 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicator=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicator=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =If(Parent.Width<378,Parent.Width/6,Parent.Width<500,Parent.Width/5,Parent.Width/5)
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =20
 
                 Image1_22 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorUS=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorUS=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine1CL_4.X+IconLine1CL_4.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =21
 
                 Image1_23 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorUS=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorSS=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine2CL_4.X+IconLine2CL_4.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =22
 
                 Image1_24 As image:
-                    BorderColor: =
+                    BorderColor: =RGBA(202, 202, 202, 1)
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorUS=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorES=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine3CL_4.X+IconLine3CL_4.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =23
 
                 Image1_25 As image:
                     BorderColor: =RGBA(202, 202, 202, 1)
-                    BorderThickness: =2
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                    DisabledFill: =RGBA(255, 255, 255, 1)
+                    DisplayMode: =DisplayMode.Disabled
                     Fill: =If(VarIndicatorIS=true,Color.Green,Color.White)
                     FocusedBorderThickness: =0
-                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Height: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     Image: =If(VarIndicatorIS=true,'Check_green_icon.svg')
                     RadiusBottomLeft: =50
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
-                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/20)
+                    Width: =If(Parent.Width<378,Parent.Width/16,Parent.Width<500,Parent.Width/18,Parent.Width/28)
                     X: =IconLine4CL_4.X+IconLine4CL_4.Width
                     Y: =(Parent.Height-Self.Height)/3.5
                     ZIndex: =24
@@ -414,7 +439,7 @@ ImageUploadScreen As screen:
                         Color: |-
                             =
                             If(CountRows(glryImageIS.AllItems)=4,RGBA(255, 0, 0, 1),Color.White)
-                        DisabledBorderColor: =RGBA(0, 0, 0, 1)
+                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
                         DisabledColor: =RGBA(77, 77, 77, 1)
                         DisabledFill: =RGBA(0, 0, 0, 1)
                         DisplayMode: |-
@@ -423,6 +448,7 @@ ImageUploadScreen As screen:
                         Fill: |-
                             =
                             If(CountRows(glryImageIS.AllItems)=4,RGBA(255, 255, 255, 1),RGBA(255, 0, 0, 1))
+                        FocusedBorderThickness: =0
                         Height: =60
                         HoverBorderColor: =//ColorFade(Self.BorderColor, 20%)
                         OnChange: |
@@ -466,7 +492,7 @@ ImageUploadScreen As screen:
                     LayoutMinWidth: =320
                     LoadingSpinner: =LoadingSpinner.Data
                     TemplatePadding: =2
-                    TemplateSize: =Min(250, Self.Height - 60)
+                    TemplateSize: =Min(200, Self.Height - 40)
                     Width: =Parent.Width/1.08
                     WrapCount: =4
                     ZIndex: =3
@@ -491,12 +517,12 @@ ImageUploadScreen As screen:
 
                     IconImageIS As icon.Cancel:
                         Color: =RGBA(255, 0, 0, 1)
-                        Height: =30
+                        Height: =Parent.Height/8
                         Icon: =Icon.Cancel
                         OnSelect: =Remove(LeadImagesCollection,ThisItem);
-                        Width: =30
-                        X: =ImageIS.Width-Self.Width-10
-                        Y: =ImageIS.Y+10
+                        Width: =Parent.Height/8
+                        X: =ImageIS.Width-Self.Width
+                        Y: =ImageIS.Y
                         ZIndex: =2
 
                 ctnButtonIS As groupContainer.verticalAutoLayoutContainer:
