--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -224,6 +224,7 @@ ScopeScreen As screen:
                     ZIndex: =11
 
                 lblStep1CL_2 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -238,6 +239,7 @@ ScopeScreen As screen:
                     ZIndex: =12
 
                 lblStep2CL_2 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -250,6 +252,7 @@ ScopeScreen As screen:
                     ZIndex: =13
 
                 lblStep3CL_2 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -262,6 +265,7 @@ ScopeScreen As screen:
                     ZIndex: =14
 
                 lblSteo4CL_2 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
@@ -274,6 +278,7 @@ ScopeScreen As screen:
                     ZIndex: =15
 
                 lblStep5CL_2 As label:
+                    Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
                     Height: =Parent.Height/5
                     PaddingLeft: =0
